# GainPlugin

./: .gitignore  CMakeLists.txt  MAC_BUILD_INSTRUCTIONS.md  README.md  build_mac.sh  cross_compile_mac.sh
GainPlugin/: GainPlugin.jucer
GainPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
